[package]
name = "hybridguard"
version = "0.1.0"
edition = "2021"
authors = ["Quantum Shield Labs"]
description = "Multi-layer quantum-resistant encryption system"
license = "MIT"

[dependencies]
# Cryptography
oqs = "0.10"  # liboqs Rust bindings
rand = "0.8"
sha3 = "0.10"
aes-gcm = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (for future API)
tokio = { version = "1.40", features = ["full"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Time
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "hybridguard"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
